Add footer and header components. IAdd form to input Person data.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-
+<app-header></app-header>
 
 <router-outlet></router-outlet>
 
+<app-form [person]="person"></app-form>
 
-<h1 class="text-3xl text-center font-bold underline">
-  Hello world!
-</h1>
+<app-footer [person]="person" ></app-footer>
