Change Person class. Add selectbox for gender instead of inputbox. Display conditionally information about person.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center">
+<div *ngIf="person.name != '' && person.lastName != '' " class="flex justify-center">
 
     <div class="my-10 bg-[#f60] rounded-lg px-10 py-5 text-gray-100 text-[1.25rem]">
         <div class="flex space-x-2">
